wp-content/themes/takeaway/assets/css/style.css
/* ... */
/* map section */
#main-wrapper .find-on-map { padding: 0 25px; }

#main-wrapper .find-on-map h5 {
    padding: 20px 0 20px 0;
    margin: 0;
}

#main-wrapper .find-on-map .map-section { 
    height: 200px;
}

/* view-style (grid-list-details view ) */
#main-wrapper .view-style {
    width: 100%;
    position: relative;
    padding-top: 20px;
    margin-bottom: 10px;
}


#main-wrapper .view-style .list-grid-view button {
    margin: 0 7px 0 0;
    height: 30px;
    width: 30px;
    border: 1px solid #ccc;
    text-align: center;
    border-radius: 7px;
    background: #fff;
    outline: none;
}

#main-wrapper .view-style .list-grid-view button.active {
    background: #e84a5f;
    color: #fff;
    border: none;
}

/* pagination beging */
#main-wrapper .view-style .page-list ul li {
    margin: 0 0 0 5px;
    height: 30px;
    width: 30px;
    border: 1px solid transparent;
    text-align: center;
    border-radius: 7px;
}

#main-wrapper .view-style .page-list ul li a {
    color: #343434;
    line-height: 30px;
    padding-left: 5px;
}

#main-wrapper .view-style .page-list ul li.active,
#main-wrapper .view-style .page-list ul li.active a {
    background: #e84a5f;
    color: #fff;
    border: none;
}

#main-wrapper .pagination {
    position: relative;
    width: 100%;
    height: 40px;
    float: left;
    margin-bottom: 0;
}

#main-wrapper .pagination ul li {
    text-align: center;
    border: 2px solid #111111;
    padding: 2px 10px;
    margin: 0;
    text-decoration: none;
    line-height: 1em;
    font-size: 1em;
    font-weight: normal;
    min-width: 1em;
    margin-left: 5px;
    margin-right: 5px;
    -webkit-transition: all 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
    -moz-transition: all 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
    -o-transition: all 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
    transition: all 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
    -webkit-transition: all ease-out 0.3s;
    -moz-transition: all ease-out 0.3s;
    -o-transition: all ease-out 0.3s;
    transition: all ease-out 0.3s;
}

#main-wrapper .pagination ul li:hover {
    color: #f5f5f5 !important;
    background: #111111;
}

#main-wrapper .pagination ul li:hover a {
    color: #f5f5f5 !important;
}

#main-wrapper .pagination ul li a {
    color: #343434;
    padding-left: 5px;
    line-height: 30px;
}

#main-wrapper .pagination ul li.active,
#main-wrapper .pagination ul li.active a {
    color: #f5f5f5 !important;
    background: #111111;
}

/*  Menu with right checkout */
/* ====================================================== */
#main-wrapper .my-check-right {
    background-color: #f3f3f3;
    height: auto;
    width: 100%;
    border-radius: 8px;
    -webkit-border-radius: 8px;
    overflow: hidden;
    border: 1px solid #ccc;
}

#main-wrapper .my-check-right h5 {
    margin: 0;
    padding: 20px 0px;
    font-weight: bold;
    text-align: center;
    color: #323430;
    border-bottom: 1px solid #ccc;
}


#main-wrapper .my-check-right .checkout {
    margin: 0 0 20px 0;
    padding: 0;
    text-align: center;
}

#main-wrapper .my-check-right ul {
    margin: 0;
    padding: 0 20px;
}

#main-wrapper .my-check-right ul li {
    width: 100%;
    height: auto;
    padding: 10px 0;
    border-top: 1px solid #ccc;
    position: relative;
    line-height: 5px;
    color: #323430;
    font-size: 15px;
}

#main-wrapper .my-check-right ul li:first-child {
    border-top: none;
}

#main-wrapper .my-check-right ul li p .icon-link .fa {
    margin-left: 5px;
    color: #e84a5f;
    cursor: pointer;
}
#main-wrapper .my-check-right ul li p .icon-link {
    position: absolute;
    right: 0;
    top: 10px;
}

#main-wrapper .my-check-right ul li .price {
    color: #e84a5f;
}

#main-wrapper .my-check-right ul li .price-total {
    color: #e84a5f;
    font-weight: bold;
    position: absolute;
    top: 15px;
    right: 0;
}

#main-wrapper .all-menu-details .right-checkout .details {
    width: 64%;
    height: inherit;
    padding: 10px 10px;
    position: relative;
    float: left;
}


/* menu view-2 */
/* ====================================================== */

/* mega call-us */
#main-wrapper .mega-call-us {
    width: 100%;
    padding: 60px 0 40px 0;
    background: url(../img/content/menu-heading.jpg) top center no-repeat;
    background-size: cover;
    margin: 0;

}

#main-wrapper .mega-call-us .call-mega-us {
    color: #fff;
    font-size: 25px;
    font-weight: bold;
    float: left;
}

#main-wrapper .mega-call-us .call-mega-us .fa {
    font-size: 56px;
    color: #e84a5f;
    margin-bottom: 20px;
}

#main-wrapper .mega-call-us .open-now {
    color: #fff;
    font-size: 25px;
    font-weight: bold;
    float: right;
}

#main-wrapper .mega-call-us .open-now .fa {
    font-size: 56px;
    color: #80c200;
    margin-bottom: 10px;
}

#main-wrapper .mega-call-us .open-now p {
    font-size: 22px;
}

/* all menu details */
#main-wrapper .all-menu-details {
    position: relative;
    width: 100%;
    height: auto;
    overflow: hidden;
    margin-bottom: 10px;
}

#main-wrapper .all-menu-details h5 {
    margin: 10px 0 20px 0;
    font-weight: bold;
    text-transform: uppercase;
}

#main-wrapper .all-menu-details .item-list {
    width: 100%;
    height: 100%;
    position: relative;
    overflow: hidden;
    box-sizing: border-box;
    float: left;
}

#main-wrapper .all-menu-details .item-list .m-with-details { display: none; }

#main-wrapper .thumb .item-list .list-image{ display: none; }

#main-wrapper .thumb .item-list .all-details { padding-left: 0!important; }

#main-wrapper .all-menu-details > .item-list:nth-child(odd) { background-color: #f7f7f7; }




/* Menu with image  */
#main-wrapper .all-menu-details .item-list .list-image {
    position: absolute;
    width: 131px;
    height: 125px;
    padding: 4px;
    float: left;
    border-left: 1px solid #ccc;
    border-top: 1px solid #ccc;
    border-bottom: 1px solid #ccc;
    border-right: none !important;
}
/* ... */

